--- a/postgresql/stylesheets/table.css
+++ b/postgresql/stylesheets/table.css
@@ -6,53 +6,66 @@ div.tblBasic h2 {
         margin: 25px 0 .5em 0;
 }
 
-div.tblBasic table, div.table-contents table {
-        background: #F5F5F5 url(http://docs.postgresql.fr/theme/img/nav_tbl_top_lft.png) top left no-repeat;
+div.tblBasic table {
+        background: #F5F5F5 url(http://www.postgresql.org/layout/images/nav_tbl_top_lft.png) top left no-repeat;
         margin-bottom: 15px;
 }
 
-div.tblBasic table th, div.table-contents table th {
+div.tblBasic table th {
         padding-top: 20px;
         border-bottom: 1px solid #EFEFEF;
         vertical-align: bottom;
 }
 
-div.tblBasic table td, div.table-contents table td {
+div.tblBasic table td {
         border-bottom: 1px solid #EFEFEF;
 }
 
 div.tblBasic table th,
-div.tblBasic table td,
-div.table-contents table th,
-div.table-contents table td {
+div.tblBasic table td {
         padding: 8px 11px;
         color: #555555;
 }
 
-div.tblBasic table tr.lastrow td,
-div.table-contents table tr.lastrow td {
+div.tblBasic table td.indented {
+        text-indent: 30px;
+}
+
+div.tblBasic table.tblCompact td {
+        padding: 3px 3px;
+}
+
+div.tblBasic table tr.lastrow td {
         border-bottom: none;
         padding-bottom: 13px;
 }
 
-div.tblBasic table tr.lastrow td.colFirst,
-div.table-contents table tr.lastrow td.colFirst {
-        background: url(http://docs.postgresql.fr/theme/img/nav_tbl_btm_lft.png) bottom left no-repeat;
+div.tblBasic table.tblCompact tr.lastrow td {
+        padding-bottom: 3px;
 }
 
-div.tblBasic table th.colLast,
-div.table-contents table th.colLast {
-        background: #F5F5F5 url(http://docs.postgresql.fr/theme/img/nav_tbl_top_rgt.png) top right no-repeat;
+div.tblBasic table tr.lastrow td.colFirstT,
+div.tblBasic table tr.lastrow td.colFirst {
+    
+        background: url(http://www.postgresql.org/layout/images/nav_tbl_btm_lft.png) bottom left no-repeat;
 }
 
-div.tblBasic table tr.lastrow td.colLast,
-div.table-contents table tr.lastrow td.colLast {
-        background: #F5F5F5 url(http://docs.postgresql.fr/theme/img/nav_tbl_btm_rgt.png) bottom right no-repeat;
+div.tblBasic table.tblBasicGrey th.colLast,
+div.tblBasic table.tblCompact th.colLast {
+        background: #F5F5F5 url(http://www.postgresql.org/layout/images/nav_tbl_top_rgt.png) top right no-repeat;
 }
 
-div.tblBasic table tr.firstrow td.colLast,
-div.table-contents table tr.firstrow td.colLast {
-        background: #F5F5F5 url(http://docs.postgresql.fr/theme/img/nav_tbl_top_rgt.png) top right no-repeat;
+div.tblBasic table.tblBasicGrey tr.lastrow td.colLastT,
+div.tblBasic table.tblBasicGrey tr.lastrow td.colLast,
+div.tblBasic table.tblCompact tr.lastrow td.colLast,
+div.tblBasic table.tblCompact tr.lastrow td.colLastT{
+        background: #F5F5F5 url(http://www.postgresql.org/layout/images/nav_tbl_btm_rgt.png) bottom right no-repeat;
+}
+
+div.tblBasic table.tblBasicGrey tr.firstrow td.colLastT,
+div.tblBasic table.tblBasicGrey tr.firstrow td.colLast,
+div tblBasic table.tblCompact tr.firstrow td.colLast {
+        background: #F5F5F5 url(http://www.postgresql.org/layout/images/nav_tbl_top_rgt.png) top right no-repeat;
 }
 
 div.tblBasic table th.colMid,
@@ -86,3 +99,4 @@ div.tblBasic table td.colLastRT {
         text-align: right;
         vertical-align: top;
 }
+
