--- a/postgresql/stylesheets/table.css
+++ b/postgresql/stylesheets/table.css
@@ -1,102 +1,105 @@
-/*
-  PostgreSQL.org - Table Styles
-*/
 
-div.tblBasic h2 {
+div.table h2 {
         margin: 25px 0 .5em 0;
 }
 
-div.tblBasic table {
-        background: #F5F5F5 url(http://www.postgresql.org/layout/images/nav_tbl_top_lft.png) top left no-repeat;
-        margin-bottom: 15px;
+div.table table {
+    background: #FFF;
+    margin-bottom: 15px;
+    border:2px solid #A7C6DF;
+    margin:5px 0 10px 0;
+    -moz-box-shadow:3px 3px 5px #DFDFDF;
+    border-collapse:collapse;
+    border-spacing:0;
 }
 
-div.tblBasic table th {
-        padding-top: 20px;
-        border-bottom: 1px solid #EFEFEF;
+div.table table th {
+        padding-top: 10px;
         vertical-align: bottom;
+        border:1px solid #A7C6DF;
+        text-align:left;
+        background:#e1fffc;
+            color:#000;
 }
 
-div.tblBasic table td {
-        border-bottom: 1px solid #EFEFEF;
+div.table table td {
+        border: 1px solid #A7C6DF;
 }
 
-div.tblBasic table th,
-div.tblBasic table td {
+div.table table th,
+div.table table td {
         padding: 8px 11px;
         color: #555555;
 }
 
-div.tblBasic table td.indented {
+div.table table td.indented {
         text-indent: 30px;
 }
 
-div.tblBasic table.tblCompact td {
+div.table table.tblCompact td {
         padding: 3px 3px;
 }
 
-div.tblBasic table tr.lastrow td {
+div.table table tr.lastrow td {
         border-bottom: none;
         padding-bottom: 13px;
 }
 
-div.tblBasic table.tblCompact tr.lastrow td {
+div.table table.tblCompact tr.lastrow td {
         padding-bottom: 3px;
 }
 
-div.tblBasic table tr.lastrow td.colFirstT,
-div.tblBasic table tr.lastrow td.colFirst {
-    
-        background: url(http://www.postgresql.org/layout/images/nav_tbl_btm_lft.png) bottom left no-repeat;
+div.table table tr.lastrow td.colFirstT,
+div.table table tr.lastrow td.colFirst {
+        background: url(/layout/images/nav_tbl_btm_lft.png) bottom left no-repeat;
 }
 
-div.tblBasic table.tblBasicGrey th.colLast,
-div.tblBasic table.tblCompact th.colLast {
-        background: #F5F5F5 url(http://www.postgresql.org/layout/images/nav_tbl_top_rgt.png) top right no-repeat;
+div.table table.tableGrey th.colLast,
+div.table table.tblCompact th.colLast {
+        background: #F5F5F5 url(/layout/images/nav_tbl_top_rgt.png) top right no-repeat;
 }
 
-div.tblBasic table.tblBasicGrey tr.lastrow td.colLastT,
-div.tblBasic table.tblBasicGrey tr.lastrow td.colLast,
-div.tblBasic table.tblCompact tr.lastrow td.colLast,
-div.tblBasic table.tblCompact tr.lastrow td.colLastT{
-        background: #F5F5F5 url(http://www.postgresql.org/layout/images/nav_tbl_btm_rgt.png) bottom right no-repeat;
+div.table table.tableGrey tr.lastrow td.colLastT,
+div.table table.tableGrey tr.lastrow td.colLast,
+div.table table.tblCompact tr.lastrow td.colLast,
+div.table table.tblCompact tr.lastrow td.colLastT{
+        background: #F5F5F5 url(/layout/images/nav_tbl_btm_rgt.png) bottom right no-repeat;
 }
 
-div.tblBasic table.tblBasicGrey tr.firstrow td.colLastT,
-div.tblBasic table.tblBasicGrey tr.firstrow td.colLast,
-div tblBasic table.tblCompact tr.firstrow td.colLast {
-        background: #F5F5F5 url(http://www.postgresql.org/layout/images/nav_tbl_top_rgt.png) top right no-repeat;
+div.table table.tableGrey tr.firstrow td.colLastT,
+div.table table.tableGrey tr.firstrow td.colLast,
+div table table.tblCompact tr.firstrow td.colLast {
+        background: #F5F5F5 url(/layout/images/nav_tbl_top_rgt.png) top right no-repeat;
 }
 
-div.tblBasic table th.colMid,
-div.tblBasic table td.colMid,
-div.tblBasic table th.colLast,
-div.tblBasic table td.colLast {
+div.table table th.colMid,
+div.table table td.colMid,
+div.table table th.colLast,
+div.table table td.colLast {
         background-color: #F5F5F5 ;
 }
 
-div.tblBasic table th.colLastC,
-div.tblBasic table td.colFirstC,
-div.tblBasic table td.colLastC {
+div.table table th.colLastC,
+div.table table td.colFirstC,
+div.table table td.colLastC {
         text-align: center;
 }
 
-div.tblBasic table th.colLastR,
-div.tblBasic table td.colFirstR,
-div.tblBasic table td.colLastR {
+div.table table th.colLastR,
+div.table table td.colFirstR,
+div.table table td.colLastR {
         text-align: right;
 }
 
-div.tblBasic table td.colFirstT,
-div.tblBasic table td.colMidT,
-div.tblBasic table td.colLastT {
+div.table table td.colFirstT,
+div.table table td.colMidT,
+div.table table td.colLastT {
         vertical-align: top;
 }
 
-div.tblBasic table th.colLastRT,
-div.tblBasic table td.colFirstRT,
-div.tblBasic table td.colLastRT {
+div.table table th.colLastRT,
+div.table table td.colFirstRT,
+div.table table td.colLastRT {
         text-align: right;
         vertical-align: top;
 }
-
