--- a/postgresql/stylesheets/text.css
+++ b/postgresql/stylesheets/text.css
@@ -1,26 +1,24 @@
-/*
-  PostgreSQL.org - Text Styles
-*/
 
-/* Heading Definitions */
-
-h1 {
-  color: #EC5800;
+h1 
+{
+    color: #EC5800;
 }
 
-h2 {
-  color: #666; 
+h2 
+{
+    color: #666; 
 }
 
-h3 { 
-  color: #666; 
+h3 
+{
+    color: #666; 
 }
 
-h4 { 
-  color: #666; 
+h4 
+{ 
+    color: #666; 
 }
 
-/* Text Styles */
 
 .txtColumn1 {
   width: 50%;
@@ -78,85 +76,11 @@ h4 {
   width: 1990px;
 }
 
-#txtFrontFeatureHeading {
-  padding-bottom: 1.1em;
-}
-
-#txtFrontFeatureLink a {
-  font-size: 1.2em;
-  font-weight: bold;
-  padding-left: 5px;
-}
-
-#txtFrontUserText {
-  font-size: 1.0em; 
-  color: #666; 
-  margin-top: 12px; 
-}
-
-#txtFrontUserName { 
-  font-size: 0.9em; 
-  color: #666; 
-  margin-top: 9px; 
-  font-weight: bold; 
-}
-
-#txtFrontUserLink { 
-  font-size: 0.9em; 
-  color: #666; 
-  margin-top: 11px; 
-  margin-left: 1px; 
-}
-
-#txtFrontUserLink img {
-  padding-right: 5px;
-}
-
-#txtFrontSupportUsText { 
-  font-size: 1.0em;
-  margin-top: 9px; 
-}
-
-#txtFrontSupportUsLink { 
-  font-size: 0.9em;
-  margin-top: 6px; 
-}
-
-#txtFrontSupportUsLink img {
-  padding-right: 7px;
-} 
 
 /* Link Styles */
 
-a:link                          { color:#0085B0; text-decoration: underline; }
-a:visited                       { color:#004E66; text-decoration: underline; }
-a:active                        { color:#0085B0; text-decoration: underline; }
-a:hover                         { color:#000000; text-decoration: underline; }
+a:link      { color:#0085B0; text-decoration: underline; }
+a:visited   { color:#004E66; text-decoration: underline; }
+a:active    { color:#0085B0; text-decoration: underline; }
+a:hover     { color:#000000; text-decoration: underline; }
 
-#pgFooter a:link                { color:#666; text-decoration: underline; }
-#pgFooter a:visited             { color:#666; text-decoration: underline; }
-#pgFooter a:active              { color:#666; text-decoration: underline; }
-#pgFooter a:hover               { color:#000000; text-decoration: underline; }
-
-#txtFrontUserName a:link                { color:#666; text-decoration: underline; }
-#txtFrontUserName a:visited             { color:#666; text-decoration: underline; }
-#txtFrontUserName a:active              { color:#666; text-decoration: underline; }
-#txtFrontUserName a:hover               { color:#000; text-decoration: underline; }
-
-#txtArchives a:visited	{ color:#00536E; text-decoration: underline; }
-#txtArchives pre 	{ word-wrap: break-word; font-size: 150%; }
-#txtArchives tt 	{ word-wrap: break-word; font-size: 150%; }
-
-#pgFrontUSSContainer h2, #pgFrontUSSContainer h3 {
-  margin: 0;
-  padding: 0;
-}
-
-#pgFrontNewsEventsContainer h2, #pgFrontNewsEventsContainer h3 {
-  margin: 0;
-  padding: 0;
-}
-
-#pgFrontNewsEventsContainer h3 img {
-  margin-bottom: 10px;
-}
