--- a/postgresql/stylesheets/fixed.css
+++ b/postgresql/stylesheets/fixed.css
@@ -1,7 +1,7 @@
 @import url("global.css");
 @import url("layout.css");
 @import url("text.css");
-@import url("navigation.css"); 
+@import url("navigationclasses.css"); 
 @import url("table.css");
 
 
